# opensolvency

./: .dockerignore  .gitignore  CHANGELOG.md  DEPLOY.md  Dockerfile  README.md  RELEASING.md  SECURITY.md  action.yml  biome.json  docker-compose.yml  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
agentworth-mcp/: README.md  index.js  package.json
clients/: README.md
clients/c/: Makefile  README.md  agentworth.c  agentworth.h  example.c
clients/go/: agentworth.go  go.mod
clients/python/: README.md  agentworth.py  pyproject.toml
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs
docs/: book.toml
docs/audits/: 2026-06-25-rail-conformance.md  2026-06-27-completeness-audit.md
docs/src/: SUMMARY.md  acceptance.md  agui.md  ap2.md  compliance.md  deployment.md  erc7710.md  erc8128-siwa.md  governed-wallet.md  integrations.md  introduction.md  mandates.md  personhood.md  security.md  spendtrust.md  surfaces.md  the-gate.md  world-agent.md
examples/: README.md  ai-sdk-agent.ts  shopping-agent.ts
opensolvency-mcp/: package.json
scripts/: demo.ts  eval-gate.ts  testnet-settle.ts
src/: version.ts
src/acp/: protocol.ts
src/agent/: aiAgent.ts  aiSdkModel.ts  financeAgent.ts  governance.ts  reasoning.ts
src/agui/: index.ts
src/ap2/: index.ts
src/audit/: export.ts
src/benchmark/: spendTrust.ts
test/: agui.test.ts  aiAgent.test.ts  aiSdkModel.test.ts  ap2.test.ts  audit.test.ts  auditExport.test.ts  auditRotation.test.ts  compliance.test.ts  config.test.ts  credentialBroker.test.ts  disclosure.test.ts  disclosureCorpus.test.ts  disclosureFlow.test.ts  disclosureWire.test.ts  enforcement.test.ts  erc7710.test.ts  erc8128.test.ts  evalCoverage.test.ts  evals.test.ts  examples.test.ts  executor.test.ts  finance.test.ts  financeAgent.test.ts  financeAgentTools.test.ts  gate.test.ts  identity.test.ts  ingress.test.ts  ingressHardening.test.ts  integrations.test.ts  jsonRpc.test.ts  keyCustody.test.ts  mandateCard.test.ts  mcp.test.ts  moneyDomain.test.ts  onchainClient.test.ts  optimizations.test.ts  otlpTracer.test.ts  postgresStore.test.ts  profileStore.test.ts  rails.test.ts  (+16 more)
(+91 files in other folders)
