[project]
name = "opensolvency"
version = "0.1.7"
description = "Python client for the OpenSolvency governance gate (REST over the HTTP ingress)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "General Liquidity" }]
keywords = ["agentic-payments", "governance", "opensolvency"]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["opensolvency.py"]
