[project]
name = "agentworth"
version = "0.1.8"
description = "Python client for the AgentWorth governance gate (REST over the HTTP ingress)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "General Liquidity" }]
keywords = ["agentic-payments", "governance", "agentworth"]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["agentworth.py"]
