[package]
name = "opensolvency"
version = "0.1.7"
edition = "2021"
description = "Rust client for the OpenSolvency governance gate (REST over the HTTP ingress)"
license = "MIT"
readme = "README.md"
authors = ["General Liquidity"]
repository = "https://github.com/general-liquidity/opensolvency"
keywords = ["agentic-payments", "governance", "opensolvency"]
categories = ["api-bindings"]

[dependencies]
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
