[package]
name = "agentworth"
version = "0.1.8"
edition = "2021"
description = "Rust client for the AgentWorth governance gate (REST over the HTTP ingress)"
license = "MIT"
readme = "README.md"
authors = ["General Liquidity"]
repository = "https://github.com/general-liquidity/agentworth"
keywords = ["agentic-payments", "governance", "agentworth"]
categories = ["api-bindings"]

[dependencies]
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
